infra/k8s/event-bus-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 5001
      targetPort: 5001
