infra/k8s/moderation-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
