infra/k8s/posts-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Service port
      targetPort: 4000 # Container port
