infra/k8s/query-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
