infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: /posts/create
            backend:
              service:
                name: posts-clusterip
                port:
                  number: 4000
          - pathType: Prefix
            path: /posts/?(.*)/comments
            backend:
              service:
                name: comments-clusterip
                port:
                  number: 4001
          - pathType: Prefix
            path: /posts
            backend:
              service:
                name: query-clusterip
                port:
                  number: 4002
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-clusterip
                port:
                  number: 3000
